--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -277,6 +277,6 @@
 
     public void goToTransactionsPage()
     {
-        nav.NavigateTo("./TransactionsOverview/" + subCategoryIDToGet+"/"+categoryID);
+        nav.NavigateTo("./TransactionsOverview/" + subCategoryIDToGet + "/" + categoryID+"/"+budget);
     }
 }
