--- a/Client/Pages/TransactionsOverview.razor
+++ b/Client/Pages/TransactionsOverview.razor
@@ -1,4 +1,4 @@
-﻿@page "/TransactionsOverview/{subCatID:int}/{categoryID:int}"
+﻿@page "/TransactionsOverview/{subCatID:int}/{categoryID:int}/{budget:double}"
 @using CountOnIt.Shared.Models.present.toShow
 @using CountOnIt.Shared.Models.present.toAdd
 @using CountOnIt.Shared.Models.present.toEdit
@@ -13,6 +13,7 @@
 <button>Profile avatar</button>
 <span>@categoryTitle > @subCategoryTitle</span>
 <h3>מבט על: "@subCategoryTitle"</h3>
+<span>תקציב: @budget</span>
 <OptionsMenuComponent></OptionsMenuComponent>
 <div id="searchBar"></div>
 <div id="sortAndFilterBtns"></div>
@@ -36,22 +37,25 @@
     [Parameter]
     public int categoryID { get; set; }
 
-    public string categoryTitle="";
+    [Parameter]
+    public double budget { get; set; }
+
+    public string categoryTitle = "";
+
+
     public string subCategoryTitle = "";
     List<TransactionOverviewToShow> allTransactions = new List<TransactionOverviewToShow>();
 
     protected override async Task OnInitializedAsync()
     {
         //get category title:
+
         var catTitle = await Http.GetAsync("api/Present/getCategoryTitle/" + categoryID);
         if (catTitle.IsSuccessStatusCode)
         {
+            var catTitleRes = await catTitle.Content.ReadAsStringAsync();
+            categoryTitle = catTitleRes;
 
-            //categoryTitle = catTitle.Content.ReadFromJsonAsync<string>().Result;
-            categoryTitle = catTitle.Content.ReadFromJsonAsync<string>().Result;
-           
-            //categoryTitle = await catTitle.Content.ReadAsStringAsync();
-            //categoryTitle = cTitle;
             Console.WriteLine("catTitle had a successful request ");
         }
         else
@@ -63,12 +67,13 @@
         var subCatTitle = await Http.GetAsync("api/Present/getSubCategoryTitle/" + subCatID);
         if (subCatTitle.IsSuccessStatusCode)
         {
-            subCategoryTitle = subCatTitle.Content.ReadFromJsonAsync<string>().Result;
+            var subTitle = await subCatTitle.Content.ReadAsStringAsync();  // Read the response as plain text
+            subCategoryTitle = subTitle;
         }
         else
         {
             var subCatErrorContent = await subCatTitle.Content.ReadAsStringAsync();
-            Console.WriteLine("Failed to find category title. Error: " + subCatErrorContent);
+            Console.WriteLine("Failed to find subcategory title. Error: " + subCatErrorContent);
         }
         //get transactions: (-----------still not filtered by month-----------)
         var getAllTransactions = await Http.GetAsync("api/Transactions/getAllTransactions/" + subCatID);
@@ -77,7 +82,7 @@
             var checkTransList = getAllTransactions.Content.ReadFromJsonAsync<List<TransactionOverviewToShow>>().Result;
             if (checkTransList != null && checkTransList.Count>0)
             {
-                allTransactions = getAllTransactions.Content.ReadFromJsonAsync<List<TransactionOverviewToShow>>().Result;
+                allTransactions = checkTransList;
 
             }
             else
