--- a/Client/Components/SubCategoryComponent.razor
+++ b/Client/Components/SubCategoryComponent.razor
@@ -286,6 +286,6 @@
 
     public void goToTransactionsPage()
     {
-        nav.NavigateTo("./TransactionsOverview/" + subCategoryIDToGet + "/" + categoryID+"/"+budget);
+        nav.NavigateTo("./TransactionsOverview/" + subCategoryIDToGet + "/" + categoryID+"/"+budget+"/"+userID);
     }
 }
