--- a/Client/Pages/TransactionsOverview.razor
+++ b/Client/Pages/TransactionsOverview.razor
@@ -1,4 +1,4 @@
-﻿@page "/TransactionsOverview/{subCatID:int}/{categoryID:int}/{budget:double}"
+﻿@page "/TransactionsOverview/{subCatID:int}/{categoryID:int}/{budget:double}/{userID:int}"
 @using CountOnIt.Shared.Models.present.toShow
 @using CountOnIt.Shared.Models.present.toAdd
 @using CountOnIt.Shared.Models.present.toEdit
@@ -14,11 +14,98 @@
 <span>@categoryTitle > @subCategoryTitle</span>
 <h3>מבט על: "@subCategoryTitle"</h3>
 <span>תקציב: @budget</span>
-<OptionsMenuComponent></OptionsMenuComponent>
-@*@if (deleteBtnClicked)
+<OptionsMenuComponent editBtnClicked="getUserCategories" deleteBtnClicked="deleteSubCatPopUp"></OptionsMenuComponent>
+@if (deleteBtnClicked)
 {
-    <GeneralPopUpComponent popupTypeTitle="@popupTitle" middleText="@popupBodyText" name="@Category.categroyTitle" action="מחיקה" makeAction=@deleteCategory></GeneralPopUpComponent>
-}*@
+    <GeneralPopUpComponent popupTypeTitle="מחיקת תת קטגוריה" middleText="@popupBodyText" action="מחיקה" makeAction="deleteSubCat" closePopUp="deleteSubCatPopUp"></GeneralPopUpComponent>
+}
+@if (editSubCatBtnClicked)
+{
+    <div>
+        <div>
+            <h2>עריכת תת קטגוריה</h2>
+            <button class="modal-close-btn" @onclick="() => editSubCatBtnClicked = !editSubCatBtnClicked">&times;</button>
+        </div>
+
+
+        @if (userCategories.Count > 0)
+        {
+            <span>עריכת תת קטגוריה ל</span>
+            @if (subCatToEdit.categroyTitle == null)
+            {
+                subCatToEdit.categroyTitle = categoryTitle;
+            }
+            <select @bind="subCatToEdit.categroyTitle">
+
+                @foreach (AllUserCategories userCategory in userCategories)
+                {
+
+                    <option value=@userCategory.categroyTitle> @userCategory.categroyTitle</option>
+
+
+                }
+            </select>
+            <span>@subCatToEdit.categroyTitle</span>
+
+        }
+
+        <div>
+            <label for="amount">שם תת קטגוריה</label>
+            <input type="text" id="amount" placeholder="שם תת הקטגוריה" @bind="subCatToEdit.subCategoryTitle" />
+        </div>
+
+        <div>
+            <label for="description">מה התקציב החודשי שלך עבור @subCatToEdit.subCategoryTitle? </label>
+            <input type="number" id="description" placeholder="0" @bind="subCatToEdit.monthlyPlannedBudget" />
+        </div>
+        <div>
+            <label for="importance">עדיפות תת הקטגוריה</label>
+            <span>@subCatToEdit.importance</span>
+            @if (subCatToEdit.importance == 0)
+            {
+                <input type="radio"
+               name="importance" @onchange="@(() => subCatToEdit.importance = 0)" checked />
+                <label>רצון</label>
+            }
+            else
+            {
+                <input type="radio"
+               name="importance" @onchange="@(() => subCatToEdit.importance = 0)" />
+                <label>רצון</label>
+            }
+            @if (subCatToEdit.importance == 1)
+            {
+                <input type="radio"
+               name="importance" @onchange="@(() => subCatToEdit.importance = 1)" checked />
+                <label>צורך</label>
+            }
+            else
+            {
+                <input type="radio"
+               name="importance" @onchange="@(() => subCatToEdit.importance = 1)" />
+                <label>צורך</label>
+            }
+            @if (subCatToEdit.importance == 2)
+            {
+                <input type="radio"
+               name="importance" @onchange="@(() => subCatToEdit.importance = 2)" checked />
+                <label>חובה</label>
+            }
+            else
+            {
+                <input type="radio"
+               name="importance" @onchange="@(() => subCatToEdit.importance = 2)" />
+                <label>חובה</label>
+            }
+        </div>
+        <div>
+            <p>לדוגמה: לק - רוצה, דלק - צריך, חייב - שכ״ד. העדיפות משפיעה על הטיפים שתקבל לייעול התקציב שלך.</p>
+        </div>
+        <br />
+        @* <button class="submit-btn" @onclick="addSubCategoryAndTransaction">שמירה ויצירת הזנה</button>*@
+        <button class="submit-btn" @onclick="saveUpdatedSubCat">שמירה וסיום</button>
+    </div>
+}
 <div id="searchBar"></div>
 <div id="sortAndFilterBtns"></div>
 <div id="transactions">
@@ -42,7 +129,10 @@
     public int categoryID { get; set; }
 
     [Parameter]
-    public double budget { get; set; }
+    public double? budget { get; set; }
+
+    [Parameter]
+    public EventCallback<SubCategoryToEdit> updateEditedSubCat { get; set; }
 
     public string categoryTitle = "";
 
@@ -51,6 +141,13 @@
     List<TransactionOverviewToShow> allTransactions = new List<TransactionOverviewToShow>();
 
     bool deleteBtnClicked = false;
+
+    bool editSubCatBtnClicked = false;
+    SubCategoryToEdit subCatToEdit = new SubCategoryToEdit();
+    List<AllUserCategories> userCategories = new List<AllUserCategories>();
+    SubCategoryToUpdate subCategoryToUpdate = new SubCategoryToUpdate();
+    public string popupBodyText = "";
+
     protected override async Task OnInitializedAsync()
     {
         //get category title:
@@ -126,6 +223,118 @@
             {
                 budget = newBudget.monthlyPlannedBudget;
             }
+        }
+    }
+
+    public async Task saveUpdatedSubCat()
+    {
+        subCategoryToUpdate.subCategoryTitle = subCatToEdit.subCategoryTitle;
+        subCategoryToUpdate.importance = subCatToEdit.importance;
+        foreach (AllUserCategories category in userCategories)
+        {
+            if (category.categroyTitle == subCatToEdit.categroyTitle)
+            {
+                subCatToEdit.categoryID = category.id;
+            }
+        }
+        subCategoryToUpdate.categoryID = subCatToEdit.categoryID;
+        subCategoryToUpdate.id = subCatToEdit.id;
+        subCategoryToUpdate.monthlyPlannedBudget = subCatToEdit.monthlyPlannedBudget;
+
+        var updateCatRes = await Http.PostAsJsonAsync("api/Present/EditSubCategory/", subCategoryToUpdate);
+        if (updateCatRes.IsSuccessStatusCode)
+        {
+            SubCategoryToUpdate updatedSubCat = await updateCatRes.Content.ReadFromJsonAsync<SubCategoryToUpdate>();
+            subCatToEdit.subCategoryTitle = updatedSubCat.subCategoryTitle;
+            subCatToEdit.importance = updatedSubCat.importance;
+            subCatToEdit.monthlyPlannedBudget = updatedSubCat.monthlyPlannedBudget;
+
+            updateEditedSubCat.InvokeAsync(subCatToEdit);
+
+            subCategoryTitle = updatedSubCat.subCategoryTitle;
+            budget = updatedSubCat.monthlyPlannedBudget;
+            foreach (AllUserCategories category in userCategories)
+            {
+                if (updatedSubCat.categoryID==category.id)
+                {
+                    categoryTitle =category.categroyTitle;
+                }
+            }
+
+            editSubCatBtnClicked = false; //closeing the edit overlay
+
+            Console.WriteLine("sub category updated");
+
+        }
+        else
+        {
+            Console.WriteLine("failed to update category");
+        }
+    }
+
+    public async Task getUserCategories()
+    {
+        //editSubCatBtnClicked = true;
+        subCatToEdit.categroyTitle = categoryTitle;
+        subCatToEdit.monthlyPlannedBudget = budget;
+        subCatToEdit.subCategoryTitle = subCategoryTitle;
+        subCatToEdit.id = subCatID;
+        subCatToEdit.categoryID = categoryID;
+        var getSubCatImportance = await Http.GetAsync("api/Present/GetSubCatImportance/" + subCatToEdit.id);
+        if (getSubCatImportance.IsSuccessStatusCode)
+        {
+            subCatToEdit.importance = await getSubCatImportance.Content.ReadFromJsonAsync<int>();
+        }
+        else
+        {
+            Console.WriteLine("couldn't find this sub cat's importance");
+        }
+
+
+        var getAllUserCategories = await Http.GetAsync("api/Present/GetUserCategories/" + userID);
+        if (getAllUserCategories.IsSuccessStatusCode)
+        {
+            userCategories = await getAllUserCategories.Content.ReadFromJsonAsync<List<AllUserCategories>>().ConfigureAwait(false);
+
+            //arranges the category dropdown so the current category will be the one initially displayed
+            List<AllUserCategories> tempUserCategories = new List<AllUserCategories>();
+            foreach (AllUserCategories category in userCategories)
+            {
+                if (category.id == categoryID)
+                {
+                    tempUserCategories.Insert(0, category);
+                }
+                else
+                {
+                    tempUserCategories.Add(category);
+                }
+
+            }
+            userCategories = tempUserCategories;
+            editSubCatBtnClicked = !editSubCatBtnClicked;
+        }
+        else
+        {
+            Console.WriteLine("no Categories found");
+        }
+    }
+    public void deleteSubCatPopUp()
+    {
+        popupBodyText = "תת הקטגוריה: '" + subCategoryTitle + "' תמחק";
+        deleteBtnClicked = !deleteBtnClicked;
+    }
+    public async Task deleteSubCat()
+    {
+        var deleteRes = await Http.DeleteAsync("api/Present/deleteSubCategory/" + subCatID);
+        if (deleteRes.IsSuccessStatusCode)
+        {
+            Console.WriteLine("sub category deleted");
+            goToHomePage();
+
+        }
+        else
+        {
+            Console.WriteLine(" בעיה במחיקת תת- קטגוריה");
         }
     }
 }
